add delivery and payment

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -36,7 +36,7 @@
                     </li>
                     <li>
                         <p>
-                            <a href="#!">CART</a>
+                            <a routerLink="/cart">CART</a>
                         </p>
                     </li>
                     <li>
