--- a/src/app/modules/shopping/component/shop-c/shop-c.component.html
+++ b/src/app/modules/shopping/component/shop-c/shop-c.component.html
@@ -20,8 +20,8 @@
                     alt="item">
                 <h4>Kidagaa</h4>
                 <p>Ksh 450</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
+                <button routerLink="/view"><i class="fas fa-eye"></i></button>
+                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
         <div class="col-md-3">
