--- a/src/app/modules/home/component/home/home.component.html
+++ b/src/app/modules/home/component/home/home.component.html
@@ -17,8 +17,8 @@
                     alt="item">
                 <h4>Cardbury Chocolate</h4>
                 <p>Ksh 75 for 250g</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
+                <button routerLink="/view"><i class="fas fa-eye"></i></button>
+                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
         <div class="col-md-3">
