--- a/src/app/modules/shopping/component/shop-b/shop-b.component.html
+++ b/src/app/modules/shopping/component/shop-b/shop-b.component.html
@@ -20,8 +20,8 @@
                     alt="item">
                 <h4>Neptune Tissue</h4>
                 <p>Ksh 40 for Pairpack</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
+                <button routerLink="/view"><i class="fas fa-eye"></i></button>
+                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
         <div class="col-md-3">
