--- a/src/app/modules/shopping/component/shop-e/shop-e.component.html
+++ b/src/app/modules/shopping/component/shop-e/shop-e.component.html
@@ -21,8 +21,8 @@
                     alt="item">
                 <h4>Socks</h4>
                 <p>Ksh 50/Pair</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
+                <button routerLink="/view"><i class="fas fa-eye"></i></button>
+                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
         <div class="col-md-3">
