--- a/src/app/modules/shopping/component/shop-a/shop-a.component.html
+++ b/src/app/modules/shopping/component/shop-a/shop-a.component.html
@@ -8,62 +8,20 @@
         </div>
     </div>
 </div>
-
-
 <!-- End of Category Illustration -->
 
 <!-- Start of Shopping Grid -->
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3" *ngFor='let shop of shops'>
             <div class="item">
-                <img src="https://www.thesun.co.uk/wp-content/uploads/2020/07/pmCOMP-cadbury-1.jpg?strip=all&quality=100&w=1200&h=800&crop=1"
-                    alt="item">
-                <h4>Cardbury Chocolate</h4>
-                <p>Ksh 75 for 250g</p>
+                <img src="{{shop.image}}" alt="item">
+                <h4>{{shop.name}}</h4>
+                <p>Ksh {{shop.cost}}-{{shop.quantity}}</p>
                 <button routerLink="/view"><i class="fas fa-eye"></i></button>
                 <button routerLink="/cart"><i class="fas fa-shopping-cart"></i></button>
             </div>
-        </div>
-        <div class="col-md-3">
-            <div class="item">
-                <img src="https://ke.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/60/846721/1.jpg?6831"
-                    alt="item">
-                <h4>Orchid Valley</h4>
-                <p>Ksh 130 for 1l</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="item">
-                <img src="https://cdnprod.mafretailproxy.com/cdn-cgi/image/format=auto,onerror=redirect/sys-master-prod/hd2/heb/8947187712030/5536_main.jpg_480Wx480H"
-                    alt="item">
-                <h4>Mcvitis Digestive</h4>
-                <p>Ksh 285 for 300g</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="item">
-                <img src="https://www.oaksncorks.com/wp-content/uploads/urban-bites-chutney-30g.jpg" alt="item">
-                <h4>Urban Bites</h4>
-                <p>Ksh 40 for 100g</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="item">
-                <img src="https://alladin.co.ke/media/catalog/product/cache/1/thumbnail/600x/de5c9b070af9964f9f77c5c09cdbde18/5/8/5897.jpg"
-                    alt="item">
-                <h4>Yoghurt</h4>
-                <p>Ksh 80 for 250ml</p>
-                <button><i class="fas fa-eye"></i></button>
-                <button><i class="fas fa-shopping-cart"></i></button>
-            </div>
-        </div>
+        </div>       
     </div>
 </div>
 <!-- End of Shopping Grid -->
