add delete icon and shop class

--- a/src/app/modules/component/cart/cart.component.html
+++ b/src/app/modules/component/cart/cart.component.html
@@ -6,16 +6,19 @@
             <th>Product</th>
             <th>Quantity</th>
             <th>Cost</th>
+            <th>Remove</th>
         </tr>
         <tr>
             <td>Cadbury Chocolate-Dream</td>
             <td>2</td>
             <td>Ksh 150</td>
+            <td><i class="fa fa-times" aria-hidden="true"></i></td>
         </tr>
         <tr>
             <td>Socks-Medium</td>
             <td>3</td>
             <td>Ksh 150</td>
+            <td><i class="fa fa-times" aria-hidden="true"></i></td>
         </tr>
         </table><br>
         <h6 class="text-center">TOTAL</h6><hr style="width: 30rem;">
