--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,26 +1,67 @@
+<!-- Material form login -->
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<body>
 
-<div class="row">
-	<div class="col-md-6 offset-md-3 mt-4">
-		<h3>Login</h3>
-		<form #f="ngForm" (ngSubmit)="onSubmit(f)">
-			<div class="form-group">
-				<label for="loginUsername">Username</label>
-				<input type="text" name="username" ngModel required #username="ngModel" class="form-control" id="loginUsername"
-					   placeholder="Enter username">
-			</div>
-			<div class="form-group">
-				<label for="loginPassword">Password</label>
-				<input type="password" name="password" ngModel required #password="ngModel" class="form-control" id="loginPassword"
-					   placeholder="Password">
-			</div>
-
-
-
-			<div>
-				<button type="submit" [disabled]="f.invalid" class="btn btn-primary">Login <i class="fas fa-sign-in-alt"></i></button>
-
-			</div>
-
-		</form>
-	</div>
+<div class="background">
+  <div class="blur"> 
+<div class="container mb-2" style="width: 50%;  padding-top: 5%;">
+    <div class="card bg-dark ">
+        <h5 class="card-header info-color white-text text-center py-4"style="color: #f7f3f3;">
+          <strong>E-mwanafunzi</strong>
+        </h5>
+        <!--Card content-->
+        <div class="card-body px-lg-5 pt-0">
+          <!-- Form -->
+          <form class="text-center" style="color: #f7f3f3;" action="#!">
+            <!-- Email -->
+            <div class="md-form">
+              <input type="email" id="materialLoginFormEmail" class="form-control">
+              <label for="materialLoginFormEmail">E-mail</label>
+            </div>
+            <!-- Password -->
+            <div class="md-form">
+              <input type="password" id="materialLoginFormPassword" class="form-control">
+              <label for="materialLoginFormPassword">Password</label>
+            </div>
+            <div class="d-flex justify-content-around">
+              <div>
+                <!-- Remember me -->
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="materialLoginFormRemember">
+                  <label class="form-check-label" for="materialLoginFormRemember">Remember me</label>
+                </div>
+              </div>
+              <div>
+                <!-- Forgot password -->
+                <a href="">Forgot password?</a>
+              </div>
+            </div>
+            <!-- Sign in button -->
+            <a href="/" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign in</a>
+            <!-- Register -->
+            <p>Not a member?
+              <a href="register">Register</a>
+            </p>
+            <!-- Social login -->
+            <p>or sign in with:</p>
+            <a type="button" class="btn-floating btn-fb btn-sm">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a type="button" class="btn-floating btn-tw btn-sm">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a type="button" class="btn-floating btn-li btn-sm">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a type="button" class="btn-floating btn-git btn-sm">
+              <i class="fab fa-github"></i>
+            </a>
+          </form>
+          <!-- Form -->
+        </div>
+      </div>
+    </div>
+      <!-- Material form login -->
+    </div> 
 </div>
+</body>      
