--- a/src/app/modules/component/cart/cart.component.html
+++ b/src/app/modules/component/cart/cart.component.html
@@ -1,31 +1,38 @@
-<div style="height: 800px; padding-top: 80px;" class="container">
-    <h2 style="color:orange; font-weight: bold;"><span style="color: skyblue; font-weight: bold;">e</span>Mwanafunzi<span style="color: navy; font-size: 20px;">__Cart Items</span></h2>
-    
-    <table>
-        <tr>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th>Cost</th>
-            <th>Remove</th>
-        </tr>
-        <tr>
-            <td>Cadbury Chocolate-Dream</td>
-            <td>2</td>
-            <td>Ksh 150</td>
-            <td><i class="fa fa-times" aria-hidden="true"></i></td>
-        </tr>
-        <tr>
-            <td>Socks-Medium</td>
-            <td>3</td>
-            <td>Ksh 150</td>
-            <td><i class="fa fa-times" aria-hidden="true"></i></td>
-        </tr>
-        </table><br>
-        <h6 class="text-center">TOTAL</h6><hr style="width: 30rem;">
-        <p class="text-center">Ksh 300</p>
-        <div class="buttons">
-            <button style="margin-left: 400px;" routerLink="/">Continue Shopping</button>
-            <button style="margin-left: 40px;" routerLink="/payment">Purchase Items</button>
+<section>
+    <div class="spacer">
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col-lg-9">
+            <div class="row shop-listing">
+              <table class="table shop-table" *ngIf="carts">
+                <tr>
+                  <th class="b-0">Name</th>
+                  <th class="b-0">Price</th>
+                  <th class="b-0">Quantity</th>
+                  <th class="b-0 text-right">Total Price</th>
+                </tr>
+                <tr *ngFor="let item of carts.items">
+                  <td>{{ item.productId.name }}</td>
+                  <td>{{ item.productId.price }}</td>
+                  <td>
+                    <button class="btn btn-primary btn-sm" (click)="_increamentQTY(item.productId._id,1)">+</button>
+                    {{ item.quantity }}
+                    <button class="btn btn-primary btn-sm">-</button>
+                  </td>
+                  <td class="text-right">
+                    <h5 class="font-medium m-b-30">{{ item.total }}</h5>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="3" align="right">Subtotal :{{ carts.subTotal }}</td>
+                  <td colspan="4" align="right">
+                    <button class="btn btn-danger" (click)="_emptyCart()">Empty Cart</button>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
         </div>
-        
-</div>
+      </div>
+    </div>
+  </section>
