--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small mdb-color indigo">
+<footer class="page-footer font-small unique-color-dark pt-4">
 
     <!-- Footer Links -->
     <div class="container text-center text-md-left">
