--- a/src/app/modules/component/delivery/delivery.component.html
+++ b/src/app/modules/component/delivery/delivery.component.html
@@ -18,7 +18,7 @@
                 <input type="text" name="" required="">
                 <label>Parent Contact</label>
             </div>
-            <a routerLink="/profile">
+            <a routerLink="/">
                 <span></span>
                 <span></span>
                 <span></span>
