--- a/src/app/modules/component/payment/payment.component.html
+++ b/src/app/modules/component/payment/payment.component.html
@@ -4,7 +4,8 @@
          
         <form action="">
               <div class="user-box">
-                  <a routerLink="/delivery"><h6>Click to Pay</h6></a>
+                  <p>PayBill 11111</p>
+                  <button class="btn btn-warning" routerLink="/delivery" style="color: white; margin-left:100px;">Delivery</button>
               </div>
           </form>
           <hr>
