--- a/src/app/modules/home/component/home/home.component.html
+++ b/src/app/modules/home/component/home/home.component.html
@@ -24,7 +24,7 @@
 </div>
 <!-- End of Shopping Grid -->
 <!-- Start of Shopping Grid Hard Code -->
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-md-3">
             <div class="item">
@@ -76,5 +76,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- End of Shopping Grid -->
