--- a/src/app/modules/shopping/component/shop-a/shop-a.component.html
+++ b/src/app/modules/shopping/component/shop-a/shop-a.component.html
@@ -1,5 +1,6 @@
+<br><br><br>
 <!-- Category Illustration -->
-<div class="container">
+<div class="container" style="height: 600px;">
     <div class="row">
         <div class="col-12">
             <div class="wrapper">
@@ -27,8 +28,8 @@
                     ${{product.price}}
                   </h5>
                 </div>
-                <button routerLink="/view"><i class="fas fa-eye"></i></button>
-                <button (click)="_addItemToCart(product._id, 1)"><i class="fas fa-shopping-cart"></i></button>
+                <!-- <button routerLink="/view"><i class="fas fa-eye"></i></button> -->
+                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i>Add to Cart</button>
               </div>
             </div>
           </div>
