--- a/src/app/modules/component/cart/cart.component.html
+++ b/src/app/modules/component/cart/cart.component.html
@@ -1,3 +1,4 @@
+<br><br><br>
 <section>
     <div class="spacer">
       <div class="container">
@@ -5,13 +6,13 @@
           <div class="col-lg-9">
             <div class="row shop-listing">
               <table class="table shop-table" *ngIf="carts">
-                <tr>
+                <tr style="color: navy;">
                   <th class="b-0">Name</th>
                   <th class="b-0">Price</th>
                   <th class="b-0">Quantity</th>
                   <th class="b-0 text-right">Total Price</th>
                 </tr>
-                <tr *ngFor="let item of carts.items">
+                <tr style="color: orange-red;" *ngFor="let item of carts.items">
                   <td>{{ item.productId.name }}</td>
                   <td>{{ item.productId.price }}</td>
                   <td>
@@ -24,9 +25,9 @@
                   </td>
                 </tr>
                 <tr>
-                  <td colspan="3" align="right">Subtotal :{{ carts.subTotal }}</td>
+                  <td colspan="3" align="right" style="color: navy; font-weight: bold;">Subtotal :{{ carts.subTotal }}</td>
                   <td colspan="4" align="right">
-                    <button class="btn btn-danger" (click)="_emptyCart()">Empty Cart</button>
+                    <button class="btn btn-warning" (click)="_emptyCart()" style="color: blue;">Empty Cart</button>
                   </td>
                 </tr>
               </table>
@@ -36,3 +37,7 @@
       </div>
     </div>
   </section>
+  <button class="btn btn-warning" routerLink="/" style="color: blue; margin-left:500px; margin-right: 10px;">Shop More</button>
+  <button class="btn btn-warning" routerLink="/payment" style="color: blue;">Check Out</button>
+
+  <br><br><br><br><br><br>
