--- a/src/app/modules/component/delivery/delivery.component.css
+++ b/src/app/modules/component/delivery/delivery.component.css
@@ -6,7 +6,7 @@
     padding: 40px;
     margin-top: 40px;
 	transform: translate(-50%, -50%);
-	background: navy;
+	background: #121b2b;
 	box-sizing: border-box;
 	box-shadow: 0 15px 25px rgba(0,0,0,.6);
 	border-radius: 10px;
