--- a/src/app/modules/shopping/component/shop-e/shop-e.component.html
+++ b/src/app/modules/shopping/component/shop-e/shop-e.component.html
@@ -20,8 +20,8 @@
                 <img src="{{shop.image}}" alt="item">
                 <h4>{{shop.name}}</h4>
                 <p>Ksh {{shop.cost}}-{{shop.quantity}}</p>
-                <button routerLink="/view"><i class="fas fa-eye"></i></button>
-                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i></button>
+                <!-- <button routerLink="/view"><i class="fas fa-eye"></i></button> -->
+                <button routerLink="/cart"><i class="fas fa-shopping-cart"></i>Add to Cart</button>
             </div>
         </div>       
     </div>
