--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light navy scrolling-navbar">
   <div class="container">
 
     <!-- Brand -->
@@ -21,7 +21,7 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a style="padding-top: 8px; color: navy;" routerLink="/"><i class="fas fa-home" style="color: navy;"></i> Home
+          <a style="padding-top: 8px; color:#03E9F4;" routerLink="/"><i class="fas fa-home" style="color: #03E9F4;"></i> Home
           </a>
         </li>
         <li class="nav-item">
@@ -29,7 +29,7 @@
         </li>
         <li>
           <div class="btn-group" mdbDropdown>
-            <a style="padding-top: 8px; padding-right: 15px; color: navy;" mdbDropdownToggle type="button"
+            <a style="padding-top: 8px; padding-right: 15px; color:#03E9F4;" mdbDropdownToggle type="button"
               class="dropdown-toggle waves-light" mdbWavesEffect>
               Category
             </a>
@@ -46,15 +46,15 @@
 
         <li class="nav-item">
           <a routerLink="/cart" class="nav-link waves-effect">
-            <span class="badge red z-depth-1 mr-1"> 1 </span>
-            <i class="fas fa-shopping-cart" style="color: navy;"></i>
-            <span class="clearfix d-none d-sm-inline-block" style="color: navy;" > Cart </span>
+        
+            <i class="fas fa-shopping-cart" style="color: #03E9F4;"></i>
+            <span class="clearfix d-none d-sm-inline-block" style="color: #03E9F4;" > Cart </span>
           </a>
         </li>
       </ul>
 
       <!-- Adding a search form  -->
-      <div class="col-sm-4 col-md-4">
+      <!-- <div class="col-sm-4 col-md-4">
 
         <form class="navbar-form" role="search" action="">
 
@@ -66,9 +66,9 @@
           </div>
 
         </form>
-      </div>
+      </div> -->
       <!-- search form end -->
-      <a style="padding-top: 5px; padding-left: 100px; color: navy;" routerLink="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out
+      <a style="padding-top: 5px; padding-left: 100px; color: skyblue;" routerLink="/login"><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out
       </a>
     </div>
 
