add register and login forms

--- a/src/app/modules/home/component/home/home.component.html
+++ b/src/app/modules/home/component/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="home">
-       <small><span style="padding-right:10px;">e-mwanafunzi@gamil.com</span> <span>+254712345678</span></small>
+       <!-- <small><span style="padding-right:10px;">e-mwanafunzi@gamil.com</span> <span>+254712345678</span></small> -->
        
        <h1><span style="color: skyblue;">e</span>Mwanafunzi</h1>
        <p>It is just that simple transparent and efficient</p>
