--- a/src/app/modules/shopping/component/shop-a/shop-a.component.html
+++ b/src/app/modules/shopping/component/shop-a/shop-a.component.html
@@ -27,8 +27,8 @@
                     ${{product.price}}
                   </h5>
                 </div>
-                <button routerLink="/view"><i class="fas fa-eye"></i></button>
-                <button (click)="_addItemToCart(product._id, 1)"><i class="fas fa-shopping-cart"></i></button>
+                <!-- <button routerLink="/cart"><i class="fas fa-shopping-cart"></i>Add to Cart</button> -->
+                <button (click)="_addItemToCart(product._id, 1)"><i class="fas fa-shopping-cart"></i>Add to Cart</button>
               </div>
             </div>
           </div>
