--- a/src/app/auth/components/register/register.component.css
+++ b/src/app/auth/components/register/register.component.css
@@ -19,11 +19,11 @@
     text-align: center;
   }
   
-  .login-box .user-box {
+  .login-box .form-group {
     position: relative;
   }
   
-  .login-box .user-box input {
+  .login-box .form-group input {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -35,7 +35,7 @@
     background: transparent;
   }
   
-  .login-box .user-box label {
+  .login-box .form-group label {
     position: absolute;
     top: 0;
     left: 0;
@@ -46,7 +46,7 @@
     transition: .5s;
   }
   
-  .login-box .user-box input:focus ~ label, .login-box .user-box input:valid ~ label {
+  .login-box .form-group input:focus ~ label, .login-box .form-group input:valid ~ label {
     top: -20px; 
     left: 0px; 
     color: #03E9F4;
